syntax = "proto3";

package rpcVideo;

option go_package = "github.com/RaymondCode/simple-demo/pb/rpcVideo;rpcVideo";

import "rpcUser/rpcUser.proto";

message Video {
  int64 id = 1;
  rpcUser.User user = 2;
  string play_url = 3;
  string cover_url = 4;
  int64 favorite_count = 5;
  int64 comment_count = 6;
  bool is_favorite = 7;
  string title = 8;
}

message PublishListRequest {
  int64 user_id = 1;
  string token = 2;
}

message PublishListResponse {
  repeated Video video_list = 1;
}

message FeedReq {
  string latest_time = 1;
  string token = 2;
}

message FeedResp {
  int32 status_code = 1;
  string status_msg = 2;
  int32 next_time = 3;
  repeated Video video_list = 4;
}



service RPCVideoService {
  rpc GetPublishList(PublishListRequest) returns (PublishListResponse) {}
  rpc Feed(FeedReq) returns (FeedResp) {}
}